--- a/Source/Frontend/digitr/src/pages/start/start.scss
+++ b/Source/Frontend/digitr/src/pages/start/start.scss
@@ -1,3 +1,29 @@
 page-start {
-
+    .backgroundimage {
+        z-index: -10;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        object-fit: cover;
+        opacity: 0.5
+    }
+    #header {
+        font-size: 4em;
+    }
+    .container {
+        width: 90%;
+        margin-left: 5%;
+        margin-top: 10%;
+        @media (min-width: 700px) {
+            width: 50%;
+            margin-left: 25%;
+        }
+        background: rgba(255, 255, 255, 0.9);
+        padding: 20px;
+        border-radius: 20px;
+        margin-bottom: 10%;
+    }
+    .active {
+        color: color($colors, primary);
+    }
 }
