add teacher analytics

--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
@@ -4,4 +4,7 @@ page-now-teachers {
         margin-top: 10%;
         color: darkgray
     }
+    ion-card-content h1 {
+        font-size: 7vh !important
+    }
 }
