--- a/Source/Frontend/digitr/src/pages/home/home.scss
+++ b/Source/Frontend/digitr/src/pages/home/home.scss
@@ -18,7 +18,16 @@ page-home {
         width: 10%;
         object-fit: contain;
         display: block;
-        padding-top: 40px;
         min-width: 200px;
+        margin-top: 20px;
+    }
+    .microsoft {
+        text-align: center;
+        color: rgb(117, 117, 117);
+        background-color: white;
+        box-shadow: 1px 1px 5px #aaaaaa;
+        padding: 10px;
+        border-radius: 2px;
+        font-weight: bold;
     }
 }
