--- a/Source/Frontend/digitr/src/pages/now-students/now-students.scss
+++ b/Source/Frontend/digitr/src/pages/now-students/now-students.scss
@@ -43,4 +43,11 @@ page-now-students {
     ion-note {
         color: black
     }
+
+    * {
+        text-decoration: none;
+    }
+    #menu:hover {
+        color: white;
+    }
 }
