--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
@@ -14,4 +14,10 @@ page-now-teachers {
     .danger {
         color: red;
     }
+    * {
+        text-decoration: none;
+    }
+    #menu:hover {
+        color: white;
+    }
 }
