--- a/Source/Frontend/digitr/src/theme/variables.scss
+++ b/Source/Frontend/digitr/src/theme/variables.scss
@@ -32,9 +32,9 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-
+$primary: rgb(86, 134, 224);
 $colors: (
-  primary:    rgb(86, 134, 224),
+  primary:    $primary,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
