--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.scss
@@ -20,4 +20,9 @@ page-now-teachers {
     #menu:hover {
         color: white;
     }
+
+    #mvp {
+        font-weight: 500;
+        font-size: 1em;
+    }
 }
